--- a/lmic/Makefile
+++ b/lmic/Makefile
@@ -1,10 +1,8 @@
-CC=g++
-
 DEPS=config.h hal.h lmic.h local_hal.h lorabase.h oslmic.h
 OBJ=aes.o hal.o lmic.o oslmic.o radio.o
 
 %.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CXX) -c -o $@ $< $(CFLAGS)
 
 all: $(OBJ)
 
